[VAS-960] feat: Add pagination info (#94)
* [VAS-960] added pagination to getBundleCreditorInstitutions and getRequestsByPsp APIs. Fixed swagger documentation and do some refactor

* [VAS-960] fixed unit tests

* [VAS-960] updated readme

* [VAS-960] updated openapi

---------

Co-authored-by: giomella <gioele.mella@emeal.nttdata.com>